# nix-opengl-driver

./: Cargo.toml  LICENSE  README.md  flake.nix
src/: build.rs  cli.rs  detect.rs  hash_store.rs  main.rs  service.rs  state.rs  tmpfiles.rs  utils.rs
templates/: nix-opengl-driver.mesa.nix.in  nix-opengl-driver.nvidia.nix.in  nix-opengl-driver.service.in
