[package]
name = "nix-opengl-driver"
version = "0.1.0"
edition = "2021"
description = "Tool for managing the standalone Nix OpenGL/Vulkan driver symlink farm"

[dependencies]
anyhow          = "1.0"
clap            = { version = "4.1", features = ["derive"] }
chrono          = { version = "0.4", features = ["alloc"] }
env_logger      = "0.10"
handlebars      = "4.3"
log             = "0.4"
regex           = "1.8"
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
tempfile        = "3.3"
thiserror = "2.0.12"
dirs   = "4.0"
libc   = "0.2"
